--- a/calculadora_de_envios.html
+++ b/calculadora_de_envios.html
@@ -97,12 +97,12 @@
 							</tr>
 
 						</tbody>
-						<!-- <tfoot>
+						<tfoot>
 							<tr>
-								<td colspan="1"></td>
-								<td>100.00</td>
+								<td colspan="5"></td>
+								<td id="pesoFacturableTotal"></td>
 							</tr>
-						</tfoot> -->
+						</tfoot>
 					</table>
 
 				</div>
