--- a/descargas.html
+++ b/descargas.html
@@ -92,7 +92,7 @@
 				</div>
 
 
-				<h3>Autoridad Regultoria Nuclear</h3>
+				<h3>Autoridad Regulatoria Nuclear</h3>
 
 				<div class="download-container">
 					<p>NORMA AR 10.16.1 – Revisión 3</p>
