--- a/calculadora_de_envios.html
+++ b/calculadora_de_envios.html
@@ -57,8 +57,8 @@
 
 				<h1> Calculadora de Envios</h1>
 
-				<!-- <select id="clase"> </select>
-					<br> -->
+				<!-- <select id="clase"> </select> -->
+				<br>
 				<div class="dimension-inputs">
 					<label for="largo">Largo (cm):</label>
 					<input type="number" id="largo" name="largo" min="0" required>
@@ -70,7 +70,9 @@
 					<input type="number" id="pesobruto" name="pesobruto" min="0" required>
 				</div>
 				<br>
+				<br>
 				<button id="agregar-tabla">Agregar</button>
+				<br>
 				<br>
 				<br>
 
