--- a/fletes_currier.html
+++ b/fletes_currier.html
@@ -7,11 +7,11 @@
 <html>
 
 <head>
-	<title>Calculadora de Envios</title>
+	<title>Fletes Currier</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/calculadora-de-envios.css" />
+	<link rel="stylesheet" href="assets/css/fletes_currier.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -42,11 +42,13 @@
 		</header>
 
 		<!-- Menu -->
+		<!-- Menu -->
 		<nav id="menu">
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes Larga Distancia</a></li>
+				<li><a href="fletes_currier.html">Fletes Currier</a></li>
 				<li><a href="descargas.html">Archivos de Uso Frecuente</a></li>
 			</ul>
 		</nav>
@@ -55,7 +57,7 @@
 		<div id="main">
 			<div class="inner">
 
-				<h1> Calculadora de Envios</h1>
+				<h1>Fletes Currier</h1>
 
 				<!-- <select id="clase"> </select> -->
 				<br>
@@ -153,7 +155,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script src="assets/js/calculadora_de_envios.js"></script>
+	<script src="assets/js/fletes_currier.js"></script>
 
 </body>
 
