--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes Larga Distancia</a></li>
+				<li><a href="fletes_currier.html">Fletes Currier</a></li>
 				<li><a href="descargas.html">Archivos de Uso Frecuente</a></li>
 			</ul>
 		</nav>
@@ -71,6 +72,17 @@
 							</div>
 						</a>
 					</article>
+					<article class="style3">
+						<span class="image">
+							<img src="images/pic03.jpg" alt="" />
+						</span>
+						<a href="fletes_currier.html">
+							<h2>Fletes Currier</h2>
+							<div class="content">
+								<p>Calculadora para fletes currier</p>
+							</div>
+						</a>
+					</article>
 					<article class="style2">
 						<span class="image">
 							<img src="images/pic02.jpg" alt="" />
@@ -82,17 +94,6 @@
 							</div>
 						</a>
 					</article>
-					<!-- <article class="style3">
-						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Feugiat</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article> -->
 					<!-- <article class="style4">
 						<span class="image">
 							<img src="images/pic04.jpg" alt="" />
